--- a/style.css
+++ b/style.css
@@ -1,22 +1,65 @@
-
-h1 {
+body {
+    background: linear-gradient(black, orange);
+    height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
-    
-}
-
-#searchForm {
-    justify-self: center;
     align-items: center;
-    height: 50px;
-}
-
-.buttons{
+  }
+  
+  h1 {
+    display: flex;
+    justify-self: flex-start;
+    color: orange;
+    font-size: 50px;
+  }
+  
+  .buttons {
     display: flex;
     flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   margin: 10px;
-   padding: 20px;
-}
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 20px;
+    width: 100vw;
+    margin-right: 200px;
+  }
+  
+  #random-team {
+    height: 50px;
+    width:200px;
+    background-color: black;
+    color: orange;
+    border-radius: 10px;
+    margin: 30px;
+  }
 
+  #teams-container{
+    font-size: 30px;
+  }
+
+  #random-player {
+    height: 50px;
+    width:200px;
+    background-color: black;
+    color: orange;
+    border-radius: 10px;
+    margin: 30px;
+  }
+
+  #records {
+    height: 50px;
+    width:200px;
+    background-color: black;
+    color: orange;
+    border-radius: 10px;
+    margin: 30px;
+  }
+
+  #hideStandings {
+    height: 50px;
+    width:200px;
+    background-color: black;
+    color: orange;
+    border-radius: 10px;
+  }
