--- a/style.css
+++ b/style.css
@@ -38,13 +38,21 @@ body {
     font-size: 30px;
   }
 
+  #searchFormTeam {
+    margin: 10px;
+  }
+
   #random-player {
     height: 50px;
     width:200px;
     background-color: black;
     color: orange;
     border-radius: 10px;
-    margin: 30px;
+    margin: 10px;
+  }
+
+  #searchFormPlayer {
+    margin: 10px;
   }
 
   #records {
