--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background: linear-gradient(black, orange);
     height: 100vh;
     width: 100vw;
@@ -70,4 +70,15 @@ body {
     background-color: black;
     color: orange;
     border-radius: 10px;
+  } */
+
+
+  #randPlayResults {
+    color: orange;
+    font-size: 20px;
+  }
+
+  #playerInnerText {
+    color: orange;
+    font-size: 20px;
   }
